--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: 'adopt'
         cache: gradle
     - name: Grant execute permission for gradlew
-      run: CD ./backend; chmod +x gradlew
+      run: cd ./backend; chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
     - name: Discord notification
