--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: cd ./backend; chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: cd ./backend; ./gradlew build
     - name: Discord notification
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
