--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,49 +1,34 @@
-name: Add Single Buildscan PR Comment for Workflow
+# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
+
+name: Java CI with Gradle
 
 on:
+  push:
+    branches: [ master ]
   pull_request:
-    branches: 'ne/buildscan-recipes'
+    branches: [ master ]
 
 jobs:
-  test:
-    name: Test
+  build:
+
     runs-on: ubuntu-latest
-    outputs:
-      buildScanUrl: ${{ steps.gradle.outputs.build-scan-url }}
+
     steps:
-
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - id: gradle
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: test
-
-  assemble:
-    name: Assemble Debug
-    runs-on: ubuntu-latest
-    outputs:
-      buildScanUrl: ${{ steps.gradle.outputs.build-scan-url }}
-    steps:
-
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - id: gradle
-        uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: assembleDebug
-
-  notification_job:
-    needs: [test, assemble]
-    name: Add Build Scan URLs
-    runs-on: ubuntu-latest
-    steps:
-      - uses: mshick/add-pr-comment@v1
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          message: |
-            **Build scans for run: [${{ github.run_id }}](https://github.com/premisedata/mobile-android/actions/runs/${{ github.run_id }})**
-            * Test Build Scan ${{ needs.test.outputs.buildScanUrl }}
-            * Assemble Build Scan ${{ needs.assemble.outputs.buildScanUrl }}
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: gradle
+    - name: Grant execute permission for gradlew
+      run: cd ./backend; chmod +x gradlew
+    - name: Build with Gradle
+      run: cd ./backend; ./gradlew build
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
