--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,17 +1,19 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Test
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: 
+      - "master"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./backend      
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -19,49 +21,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-        cache: gradle
-    - name: Grant execute permission for gradlew
-      run: cd ./backend; chmod +x gradlew
-    - name: Discord notification
-      env:
-        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-      uses: Ilshidur/action-discord@master
-      with:
-        args: "Hello, beautiful ! I ran a GitHub Actions for you <3"
-        DISCORD_USERNAME : overrides the bot nickname.
-        DISCORD_AVATAR : overrides the avatar URL.
-        DISCORD_EMBEDS : This should be a valid JSON string of an array of
-            public class User {
-                private String name;
-                private int age;
-
-                public User(String name, int age) {
-                    this.name = name;
-                    this.age = age;
-                }
-
-                public String getName() {
-                    return name;
-                }
-
-                public int getAge() {
-                    return age;
-                }
-            }
-            import static org.assertj.core.api.Assertions.*;
-            import static org.junit.jupiter.api.Assertions.*;
-
-            import org.junit.jupiter.api.DisplayName;
-            import org.junit.jupiter.api.Test;
-
-            class UserTest {
-
-                @DisplayName("생성자 확인")
-                @Test
-                void constructorTest() {
-                    User user = new User("럿고", 28);
-                    assertThat(user.getAge()).isEqualTo(30);
-                }
-            }
-    - name: Build with Gradle
-      run: cd ./backend; ./gradlew build
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
+  
+    - name: test
+      run: gradle test -Djasypt.encryptor.password=${{ secrets.KEY }}
