--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -35,7 +35,7 @@ jobs:
       with:
         args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
     - name: if fail  # 만약 실패했을 때의 설정
-      uses: actions/github-script@v3  # 커스텀 스크립트를 사용하게 해주는 액션
+      uses: actions/setup-java@v2  # 커스텀 스크립트를 사용하게 해주는 액션
       with:  # 커스텀 스크립트 작성란
         github-token: $  # 깃허브 토큰으로 PR을 close시킴
         script: |
