--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -33,7 +33,7 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       uses: Ilshidur/action-discord@master
       with:
-        args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
+        args: '이 프로젝트는 {{ EVENT_PAYLOAD.repository.full_name }} 배포 됐습니다.'
     - name: if fail  # 만약 실패했을 때의 설정
       uses: actions/setup-java@v2  # 커스텀 스크립트를 사용하게 해주는 액션
       with:  # 커스텀 스크립트 작성란
