--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Discord notification
       uses: Ilshidur/action-discord@master
 
-      env: 
+      env:
+        agrs: detail commit shuch
         DISCORD_USERNAME: PR fail
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         if: failure()
