--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -32,6 +32,7 @@ jobs:
       env:
         agrs: detail commit shuch
         DISCORD_USERNAME: PR fail
+        DISCORD_AVATAR: https://cdn.shopify.com/s/files/1/1061/1924/files/Hugging_Face_Emoji_2028ce8b-c213-4d45-94aa-21e1a0842b4d_large.png?15202324258887420558
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         if: failure()
         
