--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -25,17 +25,30 @@ jobs:
         distribution: 'adopt'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
+    - name: test
+      run: gradle test -Djasypt.encryptor.password=${{ secrets.KEY }}
+    - name: Publish Unit Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      if: ${{ always() }}
+      with:
+          files: build/test-results/**/*.xml
+ 
+      # 추가
+    - name: Cleanup Gradle Cache
+        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
+        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
+      if: ${{ always() }}
+      run: |
+          rm -f ~/.gradle/caches/modules-2/modules-2.lock
+          rm -f ~/.gradle/caches/modules-2/gc.properties
+
   
+
     - name: Discord notification
       uses: Ilshidur/action-discord@master
-
       env:
-        agrs: detail commit shuch
         DISCORD_USERNAME: PR fail
         DISCORD_AVATAR: https://cdn.shopify.com/s/files/1/1061/1924/files/Hugging_Face_Emoji_2028ce8b-c213-4d45-94aa-21e1a0842b4d_large.png?15202324258887420558
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         if: failure()
         
-    - name: test
-      run: gradle test -Djasypt.encryptor.password=${{ secrets.KEY }}
-
