--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -28,7 +28,7 @@ jobs:
       
     
     - name: Discord Alert Success
-      uses: Ilshidur/action-discord@master
+      uses: sarisia/actions-status-discord@v1
       if: success()
       with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
