--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -46,15 +46,15 @@ jobs:
       if: ${{ always() }}
       with:
           files: build/test-results/**/*.xml
- 
-      # 추가
-    - name: Cleanup Gradle Cache
-        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
-        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
-      if: ${{ always() }}
-      run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
-
+  
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()    # run this step even if previous step failed
+      with: 
+          name: test-results
+          path: junit.xml
+          fail-on-error: 'false'
+          reporter: jest-junit        # Format of test results
+          token: ${{ secrets.GITHUB_TOKEN }}
   
 
