--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -48,7 +48,7 @@ jobs:
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: ${{ always() }}
       with:
-          files: build/test-results/**/*.xml
+          files: CIAT/backend/gradle/wrapper/gradle-wrapper.jar
           
     - name: Discord Alert Success
       uses: sarisia/actions-status-discord@v1
