--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -45,7 +45,7 @@ jobs:
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: ${{ always() }}
       with:
-          files: ()
+          files: claeo001/CIAT
           
     - name: Discord Alert Success
       uses: sarisia/actions-status-discord@v1
