--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -41,7 +41,7 @@ jobs:
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: ${{ always() }}
       with:
-          files: build/test-results/*/.xml
+          files: build/*/.xml
           
     - name: Discord Alert Success
       uses: sarisia/actions-status-discord@v1
